force-app/main/default/objects/Notes__c/Notes__c.object-meta.xml
<CustomObject>
    <label>Notes</label>
    <nameField>
        <label>Notes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>