force-app/main/default/objects/Notes__c/fields/Hold__c.field-meta.xml
<CustomField>
    <fullName>Hold__c</fullName>
    <label>Hold</label>
    <type>Date</type>
</CustomField>