force-app/main/default/objects/Notes__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>