force-app/main/default/objects/Notes__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <label>Solution</label>
    <referenceTo>Solution</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>